# QUASAR

./: .gitignore  README.md
backend/: .env.example  logging_config.py  main.py  requirements.txt
backend/routers/: agent.py  files.py
backend/services/agent/: __init__.py  config.py  logger.py  orchestrator.py
backend/services/agent/context/: manager.py  summarizer.py
backend/services/agent/models/: credentials.py  providers.py  router.py
backend/services/agent/tools/: __init__.py  executor.py  file_tools.py  terminal_tools.py
frontend/: index.html
frontend/css/: main.css
frontend/js/: agent.js  app.js  config.js  editor.js  fileTree.js  resizer.js  settings.js  terminal.js
quasar-cli/: .gitignore  LICENSE  README.md  pyproject.toml
quasar-cli/backend/: __init__.py  cli.py  logging_config.py  main.py  requirements.txt  test_endpoints.py
quasar-cli/backend/routers/: execute.py  terminal.py
quasar-cli/backend/services/: __init__.py
quasar-cli/backend/services/agent/: config.py  logger.py  orchestrator.py
quasar-cli/backend/services/agent/context/: __init__.py
quasar-cli/backend/services/agent/models/: __init__.py  credentials.py  providers.py  router.py
quasar-cli/backend/services/agent/specialists/: __init__.py
quasar-cli/backend/services/agent/tools/: __init__.py  executor.py  file_tools.py  web_tools.py
