[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quasar-ai"
version = "1.1.0"
description = "🚀 QUASAR - AI-powered CLI code editor with agentic capabilities"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Sunil Kumawat"}
]
keywords = ["ai", "cli", "code-editor", "llm", "agent", "langchain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-groq>=0.0.1",
    "langchain-ollama>=0.0.1",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "build",
    "twine",
]

[project.scripts]
quasar = "backend.cli:app"

[project.urls]
Homepage = "https://github.com/sunilkumawat/quasar-ai"
Documentation = "https://github.com/sunilkumawat/quasar-ai#readme"
Repository = "https://github.com/sunilkumawat/quasar-ai"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
exclude = ["tests*", "frontend*"]

[tool.setuptools.package-data]
backend = ["*.json", "*.yaml", "*.md"]

[tool.setuptools.exclude-package-data]
"*" = [".env", ".env.*", "*.log", "__pycache__", "*.pyc", "logs/*", "venv/*", ".venv/*"]
